--- a/src/docs/guides/sheet/features/core.en-US.mdx
+++ b/src/docs/guides/sheet/features/core.en-US.mdx
@@ -139,4 +139,4 @@ univer.registerPlugin(UniverUIPlugin, {
 * `contextMenu` - Whether to display the right-click menu.
 * `disableAutoFocus` - Whether to disable auto-focus.
 * `override` - Dependency injection override configuration.
-* `menu` - Menu configuration, see [Customize menu items (hide menu items)](https://univer.ai/zh-CN/guides/sheet/advanced/custom-ui#customizing-menu-items-hiding-menu-items)
+* `menu` - Menu configuration, see [Customize menu items (hide menu items)](/guides/sheet/advanced/custom-ui#customizing-menu-items-hiding-menu-items)
