--- a/src/docs/guides/sheet/features/core.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/core.zh-CN.mdx
@@ -139,4 +139,4 @@ univer.registerPlugin(UniverUIPlugin, {
 * `contextMenu` - 是否显示右键菜单。
 * `disableAutoFocus` - 是否禁用自动聚焦。
 * `override` - 依赖注入的覆盖配置。
-* `menu` - 菜单配置，详见[定制菜单项（隐藏菜单项）](https://univer.ai/zh-CN/guides/sheet/advanced/custom-ui#定制菜单项隐藏菜单项)
+* `menu` - 菜单配置，详见[定制菜单项（隐藏菜单项）](/guides/sheet/advanced/custom-ui#定制菜单项隐藏菜单项)
