--- a/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
@@ -13,7 +13,7 @@ import entryFile from './hyperlink/demo-1/index.txt'
 数据透视表是一种强大的sheet数据分析工具,它能够快速汇总、组织和分析大量数据，从而帮助用户发现数据中的模式和趋势。
 
 - @univerjs-pro/pivot-engine 提供了数据透视表最基本的数据计算能力，该插件的工作不依赖任何第三方的插件
-- @univerjs-pro/sheet-pivot 将 pivot-engine 组装成 univer sheet plugin 以便支持表格的渲染，协同，公式等能力
+- @univerjs-pro/sheet-pivot 将 pivot-engine 组装成 Univer Sheet 插件以便支持表格的渲染，协同，公式等能力
 - @univerjs-pro/sheet-pivot-ui 提供一个最基本的拖拽操作界面 & 筛选以及其他交互所需要的 Dialog
 
 ## 功能 
@@ -36,7 +36,7 @@ import entryFile from './hyperlink/demo-1/index.txt'
 - 分组，支持日期分组，数字分组以及元素分组
 - 筛选排序，支持值筛选排序，支持条件格式
 - 值显示方式，支持完整的 11 种值显示方式
-- 计算字段& 计算项
+- 计算字段 & 计算项
 - 增强排版能力，支持紧促视图和大纲视图，合并项和空行等
 
 ## 安装
