fix(pivot): fix pivot table doc error

--- a/src/docs/guides/sheet/features/pivot-table.en-US.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.en-US.mdx
@@ -85,6 +85,6 @@ const univer = new Univer({
 ## Register
 
 ```typescript
-univer.registerPlugin(UniverSheetsPivotTablePlugin);
+univer.registerPlugin(UniverSheetsPivotTablePlugin, { isServer: true });
 univer.registerPlugin(UniverSheetsPivotTableUIPlugin);
 ```
