--- a/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
@@ -85,6 +85,6 @@ const univer = new Univer({
 ## 注册
 
 ```typescript
-univer.registerPlugin(UniverSheetsPivotTablePlugin);
+univer.registerPlugin(UniverSheetsPivotTablePlugin, { isServer: true });
 univer.registerPlugin(UniverSheetsPivotTableUIPlugin);
 ```
