--- a/src/docs/guides/doc/features/hyperlink.zh-CN.mdx
+++ b/src/docs/guides/doc/features/hyperlink.zh-CN.mdx
@@ -1,9 +1,14 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Sandbox from '@/components/Sandbox'
+
+import entryFile from './hyperlink/demo-1/index.txt'
 
 # 超链接
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC]} value={UniverTypes.DOC} />
+
+<Sandbox entryFile={entryFile} />
 
 支持在文档中插入超链接。
 
