feat: update doc

--- a/src/docs/guides/sheet/features/data-validation.en-US.mdx
+++ b/src/docs/guides/sheet/features/data-validation.en-US.mdx
@@ -57,6 +57,8 @@ univer.registerPlugin(UniverSheetsDataValidationPlugin);
 
 ## API
 
+Full API please refer to [@univerjs/sheets-data-validation](/typedoc/@univerjs/sheets-data-validation/README)
+
 ### Using command
 
 Make example for add data validation
