--- a/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
@@ -57,6 +57,9 @@ univer.registerPlugin(UniverSheetsDataValidationPlugin);
 
 ## 使用API
 
+完整API请参考[@univerjs/sheets-data-validation](/typedoc/@univerjs/sheets-data-validation/README)
+
+
 ### 使用command
 
 以添加数据验证为例
