--- a/src/docs/guides/sheet/features/hyperlink.en-US.mdx
+++ b/src/docs/guides/sheet/features/hyperlink.en-US.mdx
@@ -62,6 +62,8 @@ univer.registerPlugin(UniverSheetsHyperLinkUIPlugin);
 
 ## API
 
+The full api please refer to [@univerjs/sheets-hyper-link-ui](/typedoc/@univerjs/sheets-hyper-link-ui/README)
+
 ### Using Commands
 ```typescript
 // All commands
