--- a/src/docs/guides/sheet/features/hyperlink.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/hyperlink.zh-CN.mdx
@@ -62,6 +62,8 @@ univer.registerPlugin(UniverSheetsHyperLinkUIPlugin);
 
 ## API
 
+完整API请参考[@univerjs/sheets-hyper-link-ui](/typedoc/@univerjs/sheets-hyper-link-ui/README)
+
 ### 使用 Commands
 ```typescript
 // All commands
