--- a/src/docs/guides/sheet/features/thread-comment.en-US.mdx
+++ b/src/docs/guides/sheet/features/thread-comment.en-US.mdx
@@ -95,6 +95,8 @@ univer.registerPlugin(UniverSheetsThreadCommentPlugin);
 
 ## API
 
+Full API please refer to [@univerjs/sheets-thread-comment](/typedoc/@univerjs/sheets-thread-comment/README)
+
 ## Using Command
 
 ```typescript
