--- a/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
@@ -95,6 +95,8 @@ univer.registerPlugin(UniverSheetsThreadCommentPlugin);
 
 ## API
 
+完整API请参考 [@univerjs/sheets-thread-comment](/typedoc/@univerjs/sheets-thread-comment/README)
+
 ## 使用Command
 
 ```typescript
