--- a/src/docs/guides/sheet/features/hyperlink.en-US.mdx
+++ b/src/docs/guides/sheet/features/hyperlink.en-US.mdx
@@ -59,3 +59,30 @@ const univer = new Univer({
 univer.registerPlugin(UniverSheetsHyperLinkPlugin);
 univer.registerPlugin(UniverSheetsHyperLinkUIPlugin);
 ```
+
+## API
+
+The full api please refer to [@univerjs/sheets-hyper-link-ui](/typedoc/@univerjs/sheets-hyper-link-ui/README)
+
+### Using Commands
+```typescript
+// All commands
+import { AddHyperLinkCommand, type IAddHyperLinkCommandParams } from '@univerjs/sheets-hyper-link-ui';
+import { RemoveHyperLinkCommand, CancelHyperLinkCommand, type IRemoveHyperLinkCommandParams } from '@univerjs/sheets-hyper-link-ui';
+import { UpdateHyperLinkCommand, type IUpdateHyperLinkCommandParams } from '@univerjs/sheets-hyper-link-ui';
+
+// Add hyperlink by command
+const commandService = univer.__getInjector().get(ICommandService);
+
+commandService.executeCommand(AddHyperLinkCommand.id, {
+    unitId: 'unitId',
+    subUnitId: 'subUnitId',
+    link: {
+        // comment content
+        payload: 'https://univer.ai',
+        id: '1',
+        row: 0,
+        column: 0
+    },
+} as IAddCommentCommandParams);
+```
