--- a/src/docs/guides/sheet/features/pivot-table.en-US.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.en-US.mdx
@@ -10,11 +10,11 @@ import entryFile from './hyperlink/demo-1/index.txt'
 
 {/* <Sandbox entryFile={entryFile} /> */}
 
-Pivot table is a powerful sheet data analysis tool that can quickly summarize, organize and analyze large amounts of data, thereby helping users discover patterns and trends in the data.
+Pivot table is a powerful data analysis tool that can quickly summarize, organize and analyze large amounts of data, thereby helping users discover patterns and trends in the data.
 
-- @univerjs-pro/pivot-engine provides the most basic data calculation capabilities for pivot tables. The plugin does not rely on any third-party plug-ins for its work.
-- @univerjs-pro/sheet-pivot assembles pivot-engine into universal sheet plugin to support table rendering, collaboration, formulas and other capabilities
-- @univerjs-pro/sheet-pivot-ui provides a basic drag-and-drop interface & filtering and other dialogs required for interaction
+- `@univerjs-pro/pivot-engine` provides the most basic data calculation capabilities for pivot tables. The plugin does not rely on any third-party plug-ins for its work.
+- `@univerjs-pro/sheet-pivot` assembles pivot-engine into universal sheet plugin to support table rendering, collaboration, formulas and other capabilities
+- `@univerjs-pro/sheet-pivot-ui` provides a basic drag-and-drop interface & filtering and other dialogs required for interaction
 
 ## Feature ability
 
@@ -23,6 +23,7 @@ Since PivotTable is a very complex and large-scale function, we currently provid
 </Callout>
 
 ### Currently supported functions
+
 - 11 subtotal methods supported like excel
 - Dimension label filtering and sorting (using localCompare method)
 - tabular layout
