--- a/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
@@ -10,19 +10,20 @@ import entryFile from './hyperlink/demo-1/index.txt'
 
 {/* <Sandbox entryFile={entryFile} /> */}
 
-数据透视表是一种强大的sheet数据分析工具,它能够快速汇总、组织和分析大量数据，从而帮助用户发现数据中的模式和趋势。
+数据透视表是一种强大的数据分析工具，它能够快速汇总、组织和分析大量数据，从而帮助用户发现数据中的模式和趋势。
 
-- @univerjs-pro/pivot-engine 提供了数据透视表最基本的数据计算能力，该插件的工作不依赖任何第三方的插件
-- @univerjs-pro/sheet-pivot 将 pivot-engine 组装成 Univer Sheet 插件以便支持表格的渲染，协同，公式等能力
-- @univerjs-pro/sheet-pivot-ui 提供一个最基本的拖拽操作界面 & 筛选以及其他交互所需要的 Dialog
+- `@univerjs-pro/pivot-engine` 提供了数据透视表最基本的数据计算能力，该插件的工作不依赖任何第三方的插件
+- `@univerjs-pro/sheet-pivot` 将 pivot-engine 组装成 Univer Sheet 插件以便支持表格的渲染，协同，公式等能力
+- `@univerjs-pro/sheet-pivot-ui` 提供一个最基本的拖拽操作界面 & 筛选以及其他交互所需要的 Dialog
 
-## 功能 
+## 功能
 
 <Callout>
 由于数据透视表是很复杂的大型功能，目前我们提供 beta 版本，后续会继续迭代完善。
 </Callout>
 
 ### 现阶段支持功能
+
 - 11 种 Excel 支持的汇总方式
 - 维度标签筛选，排序（使用 localCompare 方式）
 - 表格视图
