--- a/src/docs/guides/sheet/features/sort.en-US.mdx
+++ b/src/docs/guides/sheet/features/sort.en-US.mdx
@@ -1,9 +1,14 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Sandbox from '@/components/Sandbox'
+
+import entryFile from './sort/demo-1/index.txt'
 
 # Sort
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
+
+<Sandbox entryFile={entryFile} />
 
 The sort plugin provides sorting functionality for cells in ranges.
 
