--- a/src/docs/guides/sheet/features/sort.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/sort.zh-CN.mdx
@@ -1,9 +1,14 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Sandbox from '@/components/Sandbox'
+
+import entryFile from './sort/demo-1/index.txt'
 
 # 排序
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
+
+<Sandbox entryFile={entryFile} />
 
 排序插件提供了对指定区域内单元格的排序功能。
 
