fix(pivot): fix pivot table typing error

--- a/src/docs/guides/sheet/features/pivot-table.en-US.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.en-US.mdx
@@ -13,8 +13,8 @@ import entryFile from './hyperlink/demo-1/index.txt'
 Pivot table is a powerful data analysis tool that can quickly summarize, organize and analyze large amounts of data, thereby helping users discover patterns and trends in the data.
 
 - `@univerjs-pro/pivot-engine` provides the most basic data calculation capabilities for pivot tables. The plugin does not rely on any third-party plug-ins for its work.
-- `@univerjs-pro/sheet-pivot` assembles pivot-engine into universal sheet plugin to support table rendering, collaboration, formulas and other capabilities
-- `@univerjs-pro/sheet-pivot-ui` provides a basic drag-and-drop interface & filtering and other dialogs required for interaction
+- `@univerjs-pro/sheets-pivot` assembles pivot-engine into universal sheet plugin to support table rendering, collaboration, formulas and other capabilities
+- `@univerjs-pro/sheets-pivot-ui` provides a basic drag-and-drop interface & filtering and other dialogs required for interaction
 
 ## Feature ability
 
@@ -45,12 +45,12 @@ Since PivotTable is a very complex and large-scale function, we currently provid
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs-pro/pivot-engine @univerjs/sheet-pivot @univerjs/sheet-pivot-ui
+    pnpm add @univerjs-pro/pivot-engine @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs-pro/pivot-engine @univerjs/sheet-pivot @univerjs/sheet-pivot-ui
+    npm install @univerjs-pro/pivot-engine @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
     ```
   </Tabs.Tab>
 </Tabs>
