--- a/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
@@ -13,8 +13,8 @@ import entryFile from './hyperlink/demo-1/index.txt'
 数据透视表是一种强大的数据分析工具，它能够快速汇总、组织和分析大量数据，从而帮助用户发现数据中的模式和趋势。
 
 - `@univerjs-pro/pivot-engine` 提供了数据透视表最基本的数据计算能力，该插件的工作不依赖任何第三方的插件
-- `@univerjs-pro/sheet-pivot` 将 pivot-engine 组装成 Univer Sheet 插件以便支持表格的渲染，协同，公式等能力
-- `@univerjs-pro/sheet-pivot-ui` 提供一个最基本的拖拽操作界面 & 筛选以及其他交互所需要的 Dialog
+- `@univerjs-pro/sheets-pivot` 将 pivot-engine 组装成 Univer Sheet 插件以便支持表格的渲染，协同，公式等能力
+- `@univerjs-pro/sheets-pivot-ui` 提供一个最基本的拖拽操作界面 & 筛选以及其他交互所需要的 Dialog
 
 ## 功能
 
@@ -45,12 +45,12 @@ import entryFile from './hyperlink/demo-1/index.txt'
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs-pro/pivot-engine @univerjs/sheet-pivot @univerjs/sheet-pivot-ui
+    pnpm add @univerjs-pro/pivot-engine @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs-pro/pivot-engine @univerjs/sheet-pivot @univerjs/sheet-pivot-ui
+    npm install @univerjs-pro/pivot-engine @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
     ```
   </Tabs.Tab>
 </Tabs>
