feat: update formula docs

--- a/src/docs/guides/sheet/features/formula.en-US.mdx
+++ b/src/docs/guides/sheet/features/formula.en-US.mdx
@@ -1,5 +1,4 @@
 import { Tabs } from 'nextra/components'
-import { LocaleType } from '@univerjs/core'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 import FormulaList from './formula/FormulaList'
@@ -12,7 +11,7 @@ Formula is one of the core capabilities provided by Univer, which allows you to 
 
 ## Supported Formula Functions
 
-<FormulaList locale={LocaleType.EN_US} />
+<FormulaList locale="enUS" />
 
 ## Custom Formula
 
