--- a/src/docs/guides/sheet/features/formula.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/formula.zh-CN.mdx
@@ -1,5 +1,4 @@
 import { Tabs } from 'nextra/components'
-import { LocaleType } from '@univerjs/core'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 import FormulaList from './formula/FormulaList'
@@ -12,7 +11,7 @@ import FormulaList from './formula/FormulaList'
 
 ## 已经支持的公式函数
 
-<FormulaList locale={LocaleType.ZH_CN} />
+<FormulaList locale="zhCN" />
 
 ## 自定义公式
 
