--- a/src/docs/guides/general/advanced/custom-ui.zh-CN.mdx
+++ b/src/docs/guides/general/advanced/custom-ui.zh-CN.mdx
@@ -1,7 +1,7 @@
 import { Callout } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
-# 扩展 UI
+# 自定义 UI
 
 <BadgeGroup values={[UniverTypes.GENERAL]} value={UniverTypes.GENERAL} />
 
