docs: add API links on page bottom

--- a/src/docs/guides/sheet/features/filter.en-US.mdx
+++ b/src/docs/guides/sheet/features/filter.en-US.mdx
@@ -59,3 +59,19 @@ const univer = new Univer({
 univer.registerPlugin(UniverSheetsFilterPlugin);
 univer.registerPlugin(UniverSheetsFilterUIPlugin);
 ```
+
+## API
+
+### Plugin API
+
+* [@univerjs/sheets-filter](/typedoc/@univerjs/sheets-filter/README)
+* [@univerjs/sheets-filter-ui](/typedoc/@univerjs/sheets-filter-ui/README)
+
+### Facade API
+
+* `FRange`'s properties
+  * [`getFilter()`](/typedoc/@univerjs/facade/classes/FRange#getfilter)
+  * [`createFilter()`](/typedoc/@univerjs/facade/classes/FRange#createfilter)
+* `FWorksheet`'s properties
+  * [`getFilter()`](/typedoc/@univerjs/facade/classes/FWorksheet#getfilter)
+* [`FFilter`](/typedoc/@univerjs/facade/classes/FFilter)
