--- a/src/docs/guides/sheet/features/filter.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/filter.zh-CN.mdx
@@ -59,3 +59,19 @@ const univer = new Univer({
 univer.registerPlugin(UniverSheetsFilterPlugin);
 univer.registerPlugin(UniverSheetsFilterUIPlugin);
 ```
+
+## API
+
+### 插件 API
+
+* [@univerjs/sheets-filter](/typedoc/@univerjs/sheets-filter/README)
+* [@univerjs/sheets-filter-ui](/typedoc/@univerjs/sheets-filter-ui/README)
+
+### Facade API
+
+* `FRange` 对象上的 API
+  * [`getFilter()`](/typedoc/@univerjs/facade/classes/FRange#getfilter)
+  * [`createFilter()`](/typedoc/@univerjs/facade/classes/FRange#createfilter)
+* `FWorksheet` 对象上的 API
+  * [`getFilter()`](/typedoc/@univerjs/facade/classes/FWorksheet#getfilter)
+* [`FFilter` 对象](/typedoc/@univerjs/facade/classes/FFilter)
