--- a/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
@@ -86,6 +86,6 @@ const univer = new Univer({
 ## 注册
 
 ```typescript
-univer.registerPlugin(UniverSheetsPivotTablePlugin, { registerInOneThread: true });
+univer.registerPlugin(UniverSheetsPivotTablePlugin);
 univer.registerPlugin(UniverSheetsPivotTableUIPlugin);
 ```
