docs: update docs (#240)

--- a/src/docs/guides/sheet/features/pivot-table.en-US.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.en-US.mdx
@@ -87,6 +87,6 @@ const univer = new Univer({
 ## Register
 
 ```typescript
-univer.registerPlugin(UniverSheetsPivotTablePlugin, { registerInOneThread: true });
+univer.registerPlugin(UniverSheetsPivotTablePlugin);
 univer.registerPlugin(UniverSheetsPivotTableUIPlugin);
 ```
